tests/integration/snapshots/integration__snapshot_tui_test__confirm_unlock_modal.snap
---
source: tests/integration/snapshot_tui_test.rs
assertion_line: 971
expression: output
---
                                                            
                                                            
     ┌ Lock ──────────────────────────────────────────┐     
     │📹  File is being recorded                       │     
     │                                                │     
     │This file has an active recording lock.         │     
     │                                                │     
     │y: unlock and proceed | n/Esc: cancel           │     
     └────────────────────────────────────────────────┘
