tests/integration/snapshots/integration__snapshot_tui_test__context_menu_last_item.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                            
                                                            
          ┌ Menu ────────────────────────────────┐          
          │Actions                               │          
          │                                      │          
          │    Play (p)                          │          
          │    Copy to clipboard (c)             │          
          │    Optimize (t)                      │          
          │       Removes silence from recording │          
          │    Restore from backup (r)           │          
          │>   Delete (d)                        │          
          │    Add marker (m)                    │          
          └──────────────────────────────────────┘
