tests/integration/snapshots/integration__snapshot_tui_test__help_modal.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                                      
                                                                      
     ┌ Help ────────────────────────────────────────────────────┐     
     │Keyboard Shortcuts                                        │     
     │                                                          │     
     │Navigation                                                │     
     │  ↑/↓ j/k    Navigate                                     │     
     │  PgUp/Dn    Page up/down                                 │     
     │  Home/End   First/last                                   │     
     │                                                          │     
     │Actions                                                   │     
     │  Enter       Context menu                                │     
     │  p           Play session                                │     
     │  c           Copy to clipboard                           │     
     │  t           Optimize (removes silence)                  │     
     │  d           Delete session                              │     
     │                                                          │     
     │Filtering                                                 │     
     │  /           Search by filename                          │     
     │  f           Filter by agent                             │     
     │  Esc         Clear filters                               │     
     │                                                          │     
     │  ?           This help                                   │     
     │  q           Quit                                        │     
     │                                                          │     
     │Press any key to close                                    │     
     │                                                          │     
     └──────────────────────────────────────────────────────────┘
